--- a/app/templates/app/profile_list.html
+++ b/app/templates/app/profile_list.html
@@ -1,14 +1,25 @@
 {% extends 'main.html' %}
 {% load static %}
 
+<!DOCTYPE html>
+<html lang="en">
 {% block content %}
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% block additionalStyles %}
+    <link rel="stylesheet" href="{% static 'images/' %}"/> 
+    {% endblock %}
+    <style>  
+      .home-container{
+            display:grid;
+            grid-template-columns: 0.5fr 4fr 0.5fr 4fr;
+        } 
+    </style>
+  </head>
+  <body>
 
-<style>  
-  .home-container{
-        display:grid;
-        grid-template-columns: 0.5fr 4fr 0.5fr 4fr;
-    } 
-</style>
 <div class = "container my-5 padding-bottom= 20pxs" >
 
   <div class ="home-container">
@@ -128,8 +139,8 @@
     <div>  
       
 
-        <img class="profile-pic" src ="{% static 'images/admin.jpg' %}" alt ="placeholder image" height =200px> 
-       {#<!--   <img class="profile-pic" src ="{{request.user.image.url}}" alt ="placeholder image" height =200px>-->#}
+     
+        <img src ="{{user.image.url}}" alt ="placeholder image" height =200px />
       
       <div class ="card my-5" >
           Bio
@@ -141,11 +152,13 @@
         <hr>
          {{user.skill}}
       </div>
-        <a href = "{% url 'update-user'%}">
+        <a href = "{% url 'update-user' %}">
           <button class="button is-dark is-outlined is fullwidth my-5">Edit my profile</button>
         </a>          
    </div>
    <!-- left column -->
   </div>
+  {% endblock content %}
 </div>
-{% endblock content %}
+</body>
+</html>
