--- a/app/templates/app/update-user.html
+++ b/app/templates/app/update-user.html
@@ -3,10 +3,23 @@
 {% block content %}
 
 <div>
+
+    <a href="{% url 'home' %}"> </a>
     <div class = "container">
-        <form method="POST" action="" enctype="multipart/form-date">
+        <form method="POST" action="" method="POST" enctype="multipart/form-date">
             {% csrf_token %}
-            {{form.as_p}}
+            {% for field in form %}
+            <div class="form__group">
+                <label for="profile_pic">{{field.label}}</label>
+                {{field}}
+              </div>
+              {% endfor %}
+
+              <div class="form__action">
+                <a class="btn btn--dark" href="index.html">Cancel</a>
+                <button class="btn btn--main" type="submit">Update</button>
+              </div>
+            
             <input class="btn btn-primary" type="submit" name="Update Information">
           </form>
     </div>
