--- a/templates/main.html
+++ b/templates/main.html
@@ -7,31 +7,29 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <title>Boomers</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <!-- Link to css-->
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
       <link rel ='stylesheet' type='text/css' media='screen' href="{% static 'styles/main.css' %}">
   </head>
   <body>   
       <header class="site-header">
+        <!--- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-secondary fixed-top">
           <div class="container">
-            <a class="navbar-brand mr-4" href="{%url 'home'%}">Boomers 🤝 Millenials</a> &emsp;
-              <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-              </button> -->
+            <a class="navbar-brand mr-4" href="{%url 'home'%}">Boomers 🤝 Millennials</a> &emsp;
               <div class="collapse navbar-collapse" id="navbarToggle">
                 <div class="navbar-nav mr-auto">
+                  <!--- link to homepage -->
                   <a class="nav-item nav-link" href="{% url 'home'%}" >Home</a> &emsp;
                 </div>
               <div class="navbar-nav">
                   {% if request.user.is_authenticated %}
-                  <!--   <a class="nav-item nav-link" href="{% url 'register'%}">Register</a>-->
-                  <a class="nav-item nav-link" href="{% url 'profile'%}">User List</a> &emsp;
-                  <a class="nav-item nav-link" href="{% url 'user-profile' request.user.id%}">My Profile</a> &emsp;
-                  <a class="nav-item nav-link" href="{% url 'logout'%}">Log out</a> &emsp;
-          
+                  <a class="nav-item nav-link" href="{% url 'create-room' %}">Create room</a> &emsp;      <!-- link to create room -->
+                  <a class="nav-item nav-link" href="{% url 'profile'%}">Profile & User List</a> &emsp;   <!-- link to profile -->
+                   <a class="nav-item nav-link" href="{% url 'logout'%}">Log out</a> &emsp;               <!-- link to logout -->      
                   {% else %}
-                      <a class="nav-item nav-link" href="/accounts/login">Log in</a> 
-                      <a class="nav-item nav-link" href="/accounts/signup">Sign up</a>         
+                      <a class="nav-item nav-link" href="/accounts/login">Log in</a>                      <!-- link to login -->
+                      <a class="nav-item nav-link" href="/accounts/signup">Sign up</a>                    <!-- link to signup -->
                   {% endif %}
                 </div>
               </div>
@@ -40,12 +38,14 @@
         </header>
         <a href ="/">
           <h1>Boomers 🤝 MillennialZ</h1>
-        </a>   
+        </a>  
+        <!-- if user is signed up --> 
         {% if request.user.is_authenticated %}
         <br>
         <div class = "container" my-5>
           <p> <b>  Hello {{request.user}}</b> </p>
           <p >  <b>This is the place where boomers can help each other and contribtue to other generations. </b></p>
+        <!--if user is not signed up yet-->
         {% else %}
         <div class = "container" my-5>
           <br>
@@ -54,6 +54,7 @@
         </div>
         {% endif %}
         </div>
+        <!-- search bar -->
         <div class = "container">
           <br>
           <form method = "GET" action = "{% url 'home'%}">
